--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <title>Freezing Saddles</title>
+    <link rel="stylesheet" href="jspm_packages/npm/font-awesome@4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/styles.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Stuff from http://www.favicon-generator.org/
+    <!-- generated favicon stuff -->
     <link rel="apple-touch-icon" sizes="57x57" href="assets/ico/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="assets/ico/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="assets/ico/apple-icon-72x72.png">
@@ -23,12 +23,16 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-  -->
 
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
-  <body aurelia-app>
+  <body aurelia-app="main">
+    <div class="splash">
+      <div class="message">Aurelia Navigation Skeleton</div>
+      <i class="fa fa-spinner fa-spin"></i>
+    </div>
+
     <script src="jspm_packages/system.js"></script>
     <script src="config.js"></script>
     <script>
