--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
     <meta name="theme-color" content="#ffffff">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- hopefully temporary ... -->
+
+    <link rel="stylesheet" href="jspm_packages/npm/photoswipe@4.1.1/dist/photoswipe.css">
+    <link rel="stylesheet" href="jspm_packages/npm/photoswipe@4.1.1/dist/default-skin/default-skin.css">
+    <script src="jspm_packages/npm/photoswipe@4.1.1/dist/photoswipe.min.js"></script>
+    <script src="jspm_packages/npm/photoswipe@4.1.1/dist/photoswipe-ui-default.min.js"></script>
+
   </head>
 
   <body aurelia-app="main">
