Got PhotoSwipe basically working (refresh is broken)

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
     <link rel="stylesheet" href="jspm_packages/npm/photoswipe@4.1.1/dist/photoswipe.css">
     <link rel="stylesheet" href="jspm_packages/npm/photoswipe@4.1.1/dist/default-skin/default-skin.css">
-    <script src="jspm_packages/npm/photoswipe@4.1.1/dist/photoswipe.min.js"></script>
-    <script src="jspm_packages/npm/photoswipe@4.1.1/dist/photoswipe-ui-default.min.js"></script>
+    <script src="jspm_packages/npm/photoswipe@4.1.1/dist/photoswipe.js"></script>
+    <script src="jspm_packages/npm/photoswipe@4.1.1/dist/photoswipe-ui-default.js"></script>
 
   </head>
 
